# okshader

./: .gitmodules  CMakeLists.txt  Makefile  README.md  okshader.sublime-project
src/: CMakeLists.txt  allocation.cc  allocation.h  allocation_size.cc  allocation_size.h  command.h  command_buffer.cc  command_buffer.h  constants.h  formats.h  input_assembler.cc  input_assembler.h  logger.cc  logger.h  macros.h  pipeline.cc  pipeline.h  pipeline_descriptor.cc  pipeline_descriptor.h  queue.cc  queue.h  scalar.cc  scalar.h  size.h  texture.h  typed_allocation.cc  typed_allocation.h  vertex_stage.cc  vertex_stage.h
test/: CMakeLists.txt  unittests.cc
tools/cmake/: ok_library.cmake
