ok_library(ok
  allocation.cc
  allocation.h
  allocation_size.cc
  allocation_size.h
  command.cc
  command.h
  command_buffer.cc
  command_buffer.h
  constants.cc
  constants.h
  input_assembler.cc
  input_assembler.h
  logger.cc
  logger.h
  macros.h
  pipeline.cc
  pipeline.h
  pipeline_descriptor.cc
  pipeline_descriptor.h
  queue.cc
  queue.h
  scalar.cc
  scalar.h
  size.cc
  size.h
  texture.cc
  texture.h
)

target_link_libraries(ok PUBLIC Reactor glm)
